# herodotos

./: .gitignore  CHANGELOG  INSTALL  Makefile  Makefile.dev  README  TODO  configure
hBugs/: Makefile  README  hBugs.cabal
hBugs/maxima_lib/: 00_func_lib.wxm
hBugs/src/: Bugs.hs  Config.hs  Options.hs  Psql.hs  SQL.hs  Utils.hs  WXMaxima.hs  hBugs.hs
herodotos/: .gitignore  Deps  Makefile  Makefile.dev  README  TODO  _tags  configure  dune  dune-project  herodotos.ml  herodotos.opam
herodotos/commons/: Makefile  commons.mllib  debug.ml  dune  global.ml  misc.ml
herodotos/database/: Makefile  database.ml  dune  sql.ml  sql_update.ml
herodotos/debian/: changelog.karmic  changelog.lucid  control  copyright  herodotos.examples  rules
herodotos/demo/: .gitignore  Makefile  README  demo.hc.base  demoExp.hc
herodotos/demo-exp/: .gitignore  Makefile  demo.hc.base
herodotos/diff/: Makefile  ast_diff.mli  diff.ml  diff_type.mli  gnudiff.ml  gumtree.ml  hybrid.ml  ratio.ml
herodotos/diff+org/: .gitignore  Makefile  ast_bugs.mli  ast_diff.mli  diff.ml  dune  gnudiff.ml  gumtree.ml  hybrid.ml  org.ml
herodotos/docs/: herodotos.1
herodotos/engine/: Makefile  cfgblame.ml  cfgcorrel.ml  cfgerase.ml  cfghelper.ml  cfginit.ml  cfgmode.ml  cfgpreinit.ml  cfgscm.ml  cfgstat.ml  compute_size_and_date.ml  correl.ml  correl_bk.ml  correl_bk_ml  cpt_scm_stats.ml  dune  occ_correl.ml  org2bug.ml  test.ml
herodotos/exists/: .gitignore  Makefile  Makefile.ocaml  ast_exist.mli  csv.ml  dune  exist_lexer.mll  exist_parser.mly  exists.ml  exists.mllib
herodotos/graph/: Makefile  abstime.ml  avgage.ml  avglifespan.ml  birth.ml  birthfile.ml  count.ml  countevol.ml  death.ml  deathfile.ml  defects.ml  dune  eldest.ml  eldestdeath.ml  graph.ml  group.ml  helper.ml  lifeexpect.ml  netincrease.ml  patchexpert.ml  ratioevol.ml  reltime.ml  size.ml  sizepct.ml  stats.ml  timeexpert.ml  user.ml
herodotos/hcl/: .gitignore  Makefile  ast_config.mli  compute_size_and_date.ml  config.ml  config_lexer.mll  config_parser.mly  dune  setup.ml
herodotos/html/: .gitignore  dune
herodotos/org/: .gitignore  Makefile  ast_org.mli  bugs.ml  org.ml  org_helper.ml  org_lexer.ml  org_lexer.mll  org_parser.mly  orgfilter.ml
herodotos/scm/: Makefile  dune  git.ml
herodotos/scripts/: Makefile.images  Makefile.inc.in  Makefile.prj
herodotos/test/: .gitignore  (+9 more)
(+168 files in other folders)
